# rcxx-fmod

./: .gitignore  Cargo.toml  README.md  build.rs
cpp/: core_system.cpp  core_system.hpp  lib.hpp
fmod/inc/: EMPTY
fmod/lib/: EMPTY
src/: core.rs  lib.rs  main.rs
